--- a/gb/17/4/21/n9062513.md
+++ b/gb/17/4/21/n9062513.md
@@ -1,33 +1,32 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/twauiy338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/twauiy338/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/twauiy338/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/twauiy338/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/twauiy338/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>谢天奇：习正在行动？5时间点攸关金正恩命运</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2016/03/1602212249312320-600x400.jpg" />
-<h6>朝鲜核试阴云不散，半岛局势波云诡谲。朝鲜是否准备新的核试？川普所说的北京非比寻常的举动到底是什么？中美战机紧急战备状态是否意味着半岛战争危机一触即发？在接下来的五个关键时间点前后，朝鲜半岛局势很可能激化。到时，中、美、朝、韩等各方的反应，料将给出上述谜团的答案。(Getty Images)
-</h6>
+
+<h6></h6>
 <hr>
 	<p>【大纪元2017年04月22日讯】4月20日，韩联社援引政府人士消息报导，当天美国WC-135W核侦察机在日本海上空紧急起飞，探测半岛上空放射性物质，以判断朝鲜是否进行核试验。韩联社报导说，本次核侦察机的紧急出动或与政府方面收到朝鲜当日将进行核试验的情报有关。</p>
-<p>同一天，美国总统<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）在和意大利总理联合举行的新闻发布会上说：“过去两三个小时，（北京）已经出现一些非比寻常的举动。”他相信中国国家主席<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>将“非常努力地”向朝鲜施压。<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>没有说明哪些是“非比寻常的举动”。</p>
+<p>同一天，美国总统<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）在和意大利总理联合举行的新闻发布会上说：“过去两三个小时，（北京）已经出现一些非比寻常的举动。”他相信中国国家主席<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>将“非常努力地”向朝鲜施压。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>没有说明哪些是“非比寻常的举动”。</p>
 <p>美国国防部一名官员对CNN表示，周三（4月19日），美国发现有证据显示，中共能攻击陆上目标、发射巡航导弹的轰炸机已进入“高度戒备”状态，还有相当多的中共军机进入了完全战备状态。</p>
 <p>4月19日，中共官媒发文称，朝鲜如再核试，中方与美国都将“没有退路”，只能以严厉手段回应。</p>
-<p>朝鲜核试阴云不散，<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E5%8D%8A%E5%B2%9B%E5%B1%80%E5%8A%BF.md#1">半岛局势</a>波云诡谲。朝鲜是否准备新的核试？川普所说的北京非比寻常的举动到底是什么？中美战机紧急战备状态是否意味着半岛战争危机一触即发？</p>
-<p>在接下来的五个关键时间点前后，朝鲜<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E5%8D%8A%E5%B2%9B%E5%B1%80%E5%8A%BF.md#1">半岛局势</a>很可能激化。到时，中、美、朝、韩等各方的反应，料将给出上述谜团的答案。</p>
-<p>（上接：<ahref="https://github.com/twauiy338/djy/blob/master/gb/17/4/19/n9055353.md#1">谢天奇：金正恩是习心头之患?朝核威胁中国内幕惊人</a> ）</p>
+<p>朝鲜核试阴云不散，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%8A%E5%B2%9B%E5%B1%80%E5%8A%BF.md#1">半岛局势</a>波云诡谲。朝鲜是否准备新的核试？川普所说的北京非比寻常的举动到底是什么？中美战机紧急战备状态是否意味着半岛战争危机一触即发？</p>
+<p>在接下来的五个关键时间点前后，朝鲜<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%8A%E5%B2%9B%E5%B1%80%E5%8A%BF.md#1">半岛局势</a>很可能激化。到时，中、美、朝、韩等各方的反应，料将给出上述谜团的答案。</p>
+<p>（上接：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/17/4/19/n9055353.md#1">谢天奇：金正恩是习心头之患?朝核威胁中国内幕惊人</a> ）</p>
 <h2>一、4月25日 朝鲜建军节</h2>
-<p>4月15日是朝鲜的“太阳节”，也是朝鲜前领导人金日成的冥诞日，朝鲜举行了大型阅兵式。不过，<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E9%87%91%E6%AD%A3%E6%81%A9.md#1">金正恩</a>未在4月15日进行核试验，外界预期落空；但在第二天试射飞弹，却以失败告终。</p>
+<p>4月15日是朝鲜的“太阳节”，也是朝鲜前领导人金日成的冥诞日，朝鲜举行了大型阅兵式。不过，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%87%91%E6%AD%A3%E6%81%A9.md#1">金正恩</a>未在4月15日进行核试验，外界预期落空；但在第二天试射飞弹，却以失败告终。</p>
 <p>4月25日，是朝鲜的建军节。外界担忧朝鲜或将趁机进行第6次核试验，或试射弹道导弹。</p>
-<p>如果继“太阳节”之后，朝鲜在建军节也无核试或发射导弹的行动，这将暗示中美联手的强硬态度及中方的背后行动已对朝鲜<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E9%87%91%E6%AD%A3%E6%81%A9.md#1">金正恩</a>政权产生震慑效应；金正恩色厉内荏，不敢轻易冒险引杀身之祸。</p>
+<p>如果继“太阳节”之后，朝鲜在建军节也无核试或发射导弹的行动，这将暗示中美联手的强硬态度及中方的背后行动已对朝鲜<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%87%91%E6%AD%A3%E6%81%A9.md#1">金正恩</a>政权产生震慑效应；金正恩色厉内荏，不敢轻易冒险引杀身之祸。</p>
 <p>如果金正恩为维护自己的政治权威等原因而选择在建军节期间核试或发射导弹，势将引发美、中等国的制裁升级，甚至可能遭到美军的直接军事打击。一旦如此，朝鲜半岛战争局势立即升级。</p>
 <p>韩国英文《韩国先驱报》4月18日报导，美国“卡尔文森号”航母将于25日朝鲜建军节当天，抵达韩国的东部海域。</p>
 <p>川习会之后，中美双方表态联手解决朝核问题，并各自有军事部署。韩国则出现多种有关战争的流言，甚至有流言具体地指出美国会在4月27日攻击朝鲜。这个消息的流传，以及时间点上与朝鲜建军节的关联性，令人联想。</p>
-<p>考虑到近期川普政府针对朝鲜核武危机的强硬表态，美国军方的行动以及战争流言的传出，很可能反应的是美军针对<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E6%9C%9D%E6%A0%B8%E5%8D%B1%E6%9C%BA.md#1">朝核危机</a>的预案之一。</p>
+<p>考虑到近期川普政府针对朝鲜核武危机的强硬表态，美国军方的行动以及战争流言的传出，很可能反应的是美军针对<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9C%9D%E6%A0%B8%E5%8D%B1%E6%9C%BA.md#1">朝核危机</a>的预案之一。</p>
 <h2>二、5月9日 韩国总统选举日</h2>
 <p>3月10日，宪法法院判决朴槿惠下台，原订年底举行的大选提前至5月9日。此次选举是第12次韩国总统直选，也是韩国自1987年民主化以来的第7次总统直选。</p>
-<p>解决朝鲜半岛危机及朝核问题，需要韩国政府的实际参与。美国与中方如果有任何行动部署，应该考虑到与韩国大选后的新总统进行合作。5月9日，韩国大选新总统确认后，美韩等国在解决<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E6%9C%9D%E6%A0%B8%E5%8D%B1%E6%9C%BA.md#1">朝核危机</a>问题上的合作料将有进一步的展开与实质性的部署。韩国总统大选敏感期，美韩应该会加强震慑力度，稳定半岛局势，力保韩国政权平稳过渡。</p>
+<p>解决朝鲜半岛危机及朝核问题，需要韩国政府的实际参与。美国与中方如果有任何行动部署，应该考虑到与韩国大选后的新总统进行合作。5月9日，韩国大选新总统确认后，美韩等国在解决<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9C%9D%E6%A0%B8%E5%8D%B1%E6%9C%BA.md#1">朝核危机</a>问题上的合作料将有进一步的展开与实质性的部署。韩国总统大选敏感期，美韩应该会加强震慑力度，稳定半岛局势，力保韩国政权平稳过渡。</p>
 <p>在韩国总统选举敏感期，朝鲜会否进行核试或发射导弹，以搅乱时局，也是一个值得关注的时间点。</p>
 <h2>三、5月14日至15日 北京“一带一路”峰会</h2>
-<p>韩国总统选举日之后不到一周，<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>当局将于5月14日至15日在北京召开“一带一路”峰会，将有国际元首汇聚北京。</p>
-<p>自2006年开始，朝鲜金家政权的五次核试验，都跟中共高层胡习阵营与江泽民集团的生死博弈动态密切相关；其中去年9月的第五次核试，就发生在杭州G20峰会结束不久。（详情请见：<ahref="https://github.com/twauiy338/djy/blob/master/gb/17/4/19/n9055353.md#1">谢天奇：金正恩是习心头之患?朝核威胁中国内幕惊人</a>）</p>
+<p>韩国总统选举日之后不到一周，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>当局将于5月14日至15日在北京召开“一带一路”峰会，将有国际元首汇聚北京。</p>
+<p>自2006年开始，朝鲜金家政权的五次核试验，都跟中共高层胡习阵营与江泽民集团的生死博弈动态密切相关；其中去年9月的第五次核试，就发生在杭州G20峰会结束不久。（详情请见：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/17/4/19/n9055353.md#1">谢天奇：金正恩是习心头之患?朝核威胁中国内幕惊人</a>）</p>
 <p>美国男子维利加斯（Horacio Villegas）曾于2015年准确预言川普会当选总统。他日前再度预言说，人类社会近期将会发生核战，并造成大规模伤亡，他甚至明确点出核战会发生的日期是5月13日。</p>
 <p>维利加斯还提到，将会有一个重大且具毁灭性的“伪旗”（false flag，指制造破坏后留下假证据，再嫁祸给他人）事件在4月13日至5月13日之间发生，涉及的国家有叙利亚和朝鲜。</p>
 <p>5月13日恰逢韩国总统大选之后、北京“一带一路”峰会的前夕。敏感时刻，美国预言家的说法给朝鲜半岛紧张局势再增添一份神秘色彩。</p>
@@ -50,7 +49,7 @@
 <p>在习阵营已掌握党政军大权、习江斗中取得压倒性态势的情况下，习近平一旦牢牢掌控局势，十九大高层平稳换届，则意味着江泽民集团在十九大后面临更进一步的清算，而朝鲜金正恩政权失去江派的支撑后，随时面临倒台的下场。</p>
 <p>如上分析，朝鲜半岛局势紧张持续，习当局与美方联手解决朝核危机的决心明显，时间也很急迫。可以预期的是，一旦金正恩政权孤注一掷，进行核试，局势会即刻升级，美方的军事打击行动以及“斩首”金正恩的行动或紧随展开。</p>
 <p>另一种情况是，金正恩色厉内荏，已无能力或胆量挑起核武争端。在此背景之下，习当局暗中紧锣密鼓行动，制裁朝鲜，截断江派对朝鲜核武的支持与操控，逐步瓦解金正恩政权。无论哪种情况，金正恩的下场均是不妙。#</p>
-<p>（未完待续；下接：<ahref="https://github.com/twauiy338/djy/blob/master/gb/17/4/24/n9071269.md#1">谢天奇：习备战朝核危机 栗战书紧急访俄</a>）</p>
+<p>（未完待续；下接：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/17/4/24/n9071269.md#1">谢天奇：习备战朝核危机 栗战书紧急访俄</a>）</p>
 <p>（大纪元2017年4月21日首发，转载请注明出处。）</p>
 <p>责任编辑：林诗远</p>
 	
@@ -58,42 +57,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/17/4/9/n9020478.md#1">谢天奇：川习会留一悬念 十九大习江斗添变数</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/17/4/10/n9024145.md#1">谢天奇：川习会或泄露十九大政治局常委人选</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/17/4/11/n9027726.md#1">谢天奇：习私下说了啥?川普态度大变耐人寻味</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/17/4/14/n9039012.md#1">谢天奇：川习私谈5小时 内幕不一般(完整版)</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/9/n9020478.md#1">谢天奇：川习会留一悬念 十九大习江斗添变数</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/10/n9024145.md#1">谢天奇：川习会或泄露十九大政治局常委人选</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/11/n9027726.md#1">谢天奇：习私下说了啥?川普态度大变耐人寻味</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/14/n9039012.md#1">谢天奇：川习私谈5小时 内幕不一般(完整版)</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/11/n11647719.md#1" target="_blank">钟声：“服从命令”与“终身追责”</a></li><li><a href="https://github.com/twauiy338/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/30/n10884257.md#1" target="_blank">美国会CECC吁川习会关注法轮功受迫害</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/3/n10358233.md#1" target="_blank">共产暴政录：土改是中共邪恶基因的实践</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285391.md#1" target="_blank">没有题海和补课 女儿考上名牌大学</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/10/3/n12449891.md#1">《圣经》与《推背图》预言的应验与变换11</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12654008.md#1">2021年的六大预言：灾难与救赎</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/27/n12647393.md#1">中共培育基因改造士兵 或引圣经中末世战争</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/21/1/1/n12659278.md#1">川普签法案 国防部180天内须揭露UFO讯息</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/21/n12634571.md#1">《诸世纪》预言共产恶魔的产生与覆灭</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/31/n12657792.md#1">【罗厨寻味】毛豆南瓜羹</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/21/1/1/n12659878.md#1">【财商天下】2021趋吉避凶 解析财富与平安</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/31/n12657349.md#1">【微视频】2020中国脱口秀火爆 有一类不敢说</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12653452.md#1">【秦鹏直播】川普迎来两个喜讯</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12654915.md#1">【新闻大家谈】默克尔抢跑 拜登第一枪卡壳</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12655497.md#1">六票胜出 佩洛西同意爱州共和党众议员暂入席</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12655381.md#1">郑欣宜体重破90公斤 继承肥姐遗产进入倒计时</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/21/1/1/n12658383.md#1">2020年香港演艺圈 十位资深艺人离世</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12653155.md#1">明星健康码照外泄 李冰冰等千人个资仅卖1元</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/31/n12657949.md#1">周迅宣布离婚后首露面 状态坦然巧笑嫣然</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12655856.md#1">冯小刚降低身段拍网剧 上部电影票房惨淡</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12653802.md#1">2020年地球自转速度异常快 一天时间变短</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12653574.md#1">按掌心1穴位保养心脏 不让心肌梗塞上身</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/21/1/1/n12659278.md#1">川普签法案 国防部180天内须揭露UFO讯息</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12654160.md#1">木星土星相合 澳男拍到国际太空站从中穿越</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12653476.md#1">为了保护孩子 澳洲男子被巨大袋鼠击倒在地</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/twauiy338/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/twauiy338/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/4/21/n9062513.htm">谢天奇：习正在行动？5时间点攸关金正恩命运</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/4/21/n9062513.htm">谢天奇：习正在行动？5时间点攸关金正恩命运</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/twauiy338/djy/blob/master/gb/17/4/21/n9062513.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/twauiy338/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/twauiy338/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/twauiy338/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/4/21/n9062513.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
